--- a/Report/1Intro.tex
+++ b/Report/1Intro.tex
@@ -1,2 +1,2 @@
 \chapter{Introduction and Preliminaries}
-This report will detail the work done for the Numerical Modeling mathematics honors course. Whenever possible, decimal values will be calculated to double precision. Data will generally be stored in a $.dat$, using the $save\_to\_file$ function detailed in Appendix \ref{stf} file which will then be read in and plotted with the function $plot\_file$ seen in Appendix \ref{plotfile}. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem and then will look at Gordinov's method in order to simulate high resolution shock capturing in order to solve Burger's equation.
+This report will detail the work done for the Numerical Modeling mathematics honors course. Whenever possible, decimal values will be calculated to double precision. Data will generally be stored in a $.dat$ which will then be read in and plotted. The report will build up from analyzing the finite difference method, error approximation and convergence, and boundary conditions to understanding time evolutions and the Riemann problem and then will look at Gordinov's method in order to simulate high resolution shock capturing in order to solve Burger's equation.
