--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -28,8 +28,8 @@
 \maketitle % Print the title
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\input{1Intro}
-%\input{2FD}
+\input{1Intro}
+\input{2FD}
 \input{3TI}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
