--- a/Report/3TI.tex
+++ b/Report/3TI.tex
@@ -1,16 +1,16 @@
 \chapter{Time Integration}
 In this chapter, the evolution of an equation will be analyzed by looking at the time evolutions of two Partial Differential Equations (PDEs), namely the Advection Equation (Equation \ref{adveq}) and the Wave Equation (Equation \ref{waveeq}).
 \begin{equation} \label{adveq}
-\begin{gathered}
-  u_t + cu_x = 0, \qquad c \in \mathbb{R} \\ 
-  u(x,0) = u_0(x)
-\end{gathered}
+\begin{align}
+  &u_t + cu_x = 0, \qquad c \in \mathbb{R} \\ 
+  &u(x,0) = u_0(x)
+\end{align}
 \end{equation}
 \begin{equation} \label{waveeq}
-\begin{gathered}
-  u_{tt} - c^2u_{xx} = 0, \qquad c \in \mathbb{R} \\ 
-  u(x,0) = u_0(x), \qquad u(x,0) = p_0(x)
-\end{gathered}
+\begin{align}
+  &u_{tt} - c^2u_{xx} = 0, \qquad c \in \mathbb{R} \\ 
+  &u(x,0) = u_0(x), \qquad u_t(x,0) = p_0(x)
+\end{align}
 \end{equation}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Characteristic Structure}
@@ -22,7 +22,7 @@ The Advection Equation is a first order PDE (meaning the highest order derivativ
 \linebreak
 By the method of characteristics we can determine that the characteristic equations for the Advection equation are
 \begin{equation}
- \frac{dx}{dp} = c, \qquad \frac{dt}{dp} = 1, \qquad \frac{du}{dp} = 0
+\frac{dx}{dp} = c, \qquad \frac{dt}{dp} = 1, \qquad \frac{du}{dp} = 0
 \end{equation}
 which are then integrated to give
 \begin{equation}
@@ -30,13 +30,13 @@ which are then integrated to give
 \end{equation}
 By setting $p=0$ at $t=0$, $C_2$ is set to 0 and $t=p$ everywhere. Setting $x=p$ along $u_0(x)$ gives us 
 \begin{equation}
- x=cp+q \qquad \text{and} \qquad u=u_0(q).
+x=cp+q \qquad \text{and} \qquad u=u_0(q).
 \end{equation}
 \linebreak
 \linebreak
 $x=cp+q$ and $t=p$ can be used to give us the characteristic coordinate 
 \begin{equation}
- q=x-ct
+q=x-ct
 \end{equation}
 which is a line with a slope of $c$ in the $(x,t)-plane$. Substituting this into $u_0$ gives us
 \begin{equation}
@@ -47,19 +47,19 @@ which is a line with a slope of $c$ in the $(x,t)-plane$. Substituting this into
 The Wave Equation is a second order PDE, therefore it has two characteristics. $p$ and
 $q$.By reducing the equation to its canonical form, $u_{pq} = 0$. In this we see that 
 \begin{equation} \label{wavecoords}
- p = x-ct \qquad \text{and} \qquad q = x + ct
+p = x-ct \qquad \text{and} \qquad q = x + ct
 \end{equation}
 Since $u_{pq} = u_{qp} = 0$ then it follows that $u_p = P(p)$. Let $F(p)$ be an anti-derivative of $P$ therefore $\frac{dF}{dp}(p) = P(p)$ and therefore 
 \begin{equation}
- \frac{\partial}{\partial p}(u - F(p)) = 0
+\frac{\partial}{\partial p}(u - F(p)) = 0
 \end{equation}
 by integrating both sides, it then follows that
 \begin{equation}
- u - F(p) = G(q)
+u - F(p) = G(q)
 \end{equation}
 and therefore by rearranging and substituting Equation \ref{wavecoords}, we get
 \begin{equation}
- u(x,t) = F(x-ct) + G(x+ct)
+u(x,t) = F(x-ct) + G(x+ct)
 \end{equation}
 By analyzing this solution and comparing it to that of the Advection Equation, we see that we in fact get two characteristic coordinates which are lines with slopes of $\pm c$.
 %-------------------------------------------------------------------
@@ -70,12 +70,99 @@ Along with finding the characteristics comes the trouble of determining the spac
 Using the FDM discussed in Chapter 2 we will confirm the validity of three approximations of the advection equation, the Centered Euler, Leapfrog, and Upwind Euler methods, and the Leapfrog approximation of the wave equation.
 %-----------------------------------------------------------------
 \subsection{Advection Equation}
-
-%-----------------------------------------------------------------
-\subsubsection{Centered Euler}
+The advection equation can be approximated with the function $v$ where
+\begin{equation}
+v_i^j = u(x_i,t_j)
+\end{equation}
+by using the standard FDM we get the partial derivatives
+\begin{equation}\label{advfdm}
+\begin{align}
+    \partial_xv_i^j &= \frac{v_{i+1}^j - v_{i-1}^j}{2h} + O(h^2) \\
+    \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^{j-1}}{2k} + O(k^2)
+\end{align}
+\end{equation}
 %-----------------------------------------------------------------
 \subsubsection{Leapfrog}
+Substituting Equation \ref{advfdm} into the advection equation we get
+\begin{equation}
+  \partial_tv_i^j + c\partial_xv_i^j = 0
+\end{equation}
+however, $v_i^{j+1}$ is unknown. So we rearrange the equation to solve for $v_i^{j+1}$ to get
+\begin{equation}
+\begin{align}
+    v_i^{j+1} &= v_i^{j-1} - 2ck\partial_xv_i^j \\
+	      &= v_i^{j-1} - c\frac{k}{h}(v_{i+1}^j - v_{i-1}^j) + O(h^2k^2)
+\end{align}
+\end{equation}
+This is known as the ``Leapfrog'' method as it requires $v_i^{j-1}$ in order to calculate $v_i^{j+1}$ This can be somewhat problematic with the initial data as $v_i^0=u_0$ and $v_i^2$ onwards can be calculated this way but $v_i^1$ cannot be found by this method. Another problem concerining this method is the decoupling of odd and even points as all even points rely soley on the odd points of the previous time step and alternately for the odd points.
+%-----------------------------------------------------------------
+\subsubsection{Centered Euler}
+The Centred Euler method seeks to circumvent this problem by setting
+\begin{equation}
+\partial_tv_i^j = \frac{v_i^{j+1} - v_i^j}{k} + O(k) 
+\end{equation}
+substituting this into the advection equation and rearranging to solve for $v_i^{j+1}$ gives
+\begin{equation}
+\begin{align}
+    v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
+	      &= v_i^j - c\frac{k}{2h}(v_{i+1}^j - v_{i-1}^j) + O(kh^2)
+\end{align}
+\end{equation}
+This method uses a one-sided time step to calculate the next step. This makes it unconditionally unstable and over time it varies wildly from the actual data. Due to the error being relatively low for the first step, it is generally used to initialise the Leapfrog method.
 %-----------------------------------------------------------------
 \subsubsection{Upwind Euler}
+By setting
+\begin{equation}
+\begin{align}
+    \partial_xv_i^j &= \frac{v_{i+1}^j - v_i^j}{h} + O(h) \\
+    \partial_tv_i^j &= \frac{v_i^{j+1} - v_i^j}{k} + O(k)
+\end{align}
+\end{equation}
+we get
+\begin{equation}
+\begin{align}
+    v_i^{j+1} &= v_i^j - ck\partial_xv_i^j \\
+	      &= v_i^j - c\frac{k}{h}(v_{i+1}^j - v_i^j) + O(kh)
+\end{align}
+\end{equation}
+This is arguably the best method to calculate the advection equation as it uses a biased stencil to propel the data from $u_0$ along the $t$ and $x$ axis, much like the advection equation itself.
 %-----------------------------------------------------------------
 \subsection{Wave Equation}
+Using the second order, second derivative FDM on $u$ with $v_i^j = u(x_i,t_j)$ we get
+\begin{equation}
+\begin{align}
+    \partial_{xx}v_i^j &= \frac{v_{i+1}^j - 2v_i^j + v_{i-1}^j}{h^2} + O(h^2) \\
+    \partial_{tt}v_i^j &= \frac{v_i^{j+1} - 2v_i^j + v_i^{j-1}}{k^2} + O(k^2)
+\end{align}
+\end{equation}
+Substituting this into the wave equation we get
+\begin{equation}
+  \partial_{tt}v_i^j - c^2\partial_{xx}v_i^j = 0
+\end{equation}
+As with the advection equation, $v_i^{j+1}$ is unknown. reaaringing to solve for this, we get
+\begin{equation}
+  v_i^{j+1} = 2v_i^j - v_i^{j+1} + c^2\frac{k^2}{h^2}(v_{i+1}^j - 2v_i^j + v_{i-1}^j) + O(h^2k^2)
+\end{equation}
+This is a Leapfrog method approximation similar to that of the advection equation, it however does not have the decoupling of points as this stencil uses three points from the previous time step as opposed to the two used by the advection equation. This method also has the problem of $v_i^1$ being needed as initial data, this can usually be solved by calculating the row by hand and then feeding it into the system as initial data.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Implimentation}
+The initial equation
+\begin{equation}
+  u(x,0) = e^{-x^2}
+\end{equation}
+was calculated on the interval $-10<x<10$ and $0<t<20$ with $100$ and $1000$ data points and compared to the exact solution, the L2-norm of the error was also analysed. For each solution the ghost points were a periodic extension of the previous steps data. The results were as follows
+\subsection{Centered Euler Advection Equation}
+The exact solution to the equation is
+\begin{equation}
+u(x,t) = e^{-(x-t)^2}
+\end{equation}
+The wild variance of the Centered Euler method can be seen after only two seconds in Appendix \ref{center_euler_adv}. The L2-norm of the error exponentially increases over time.
+\subsection{Leapfrog Advection Equation}
+The L2-norm of the error as seen in Appendix \ref{leapfrog_adv} is due to the ghost points of the approximation being treated as a periodic extension of the function causing the function to be repeated every 20 time steps, the start of this can be seen in the appendix, which shows the functions after nine time steps.
+\subsection{Leapfrog Wave Equation}
+The exact solution to the equation is
+\begin{equation}
+u(x,t) = \frac{1}{2}(e^{-(x-t)^2} + e^{-(x+t)^2})
+\end{equation}
+Appendix \ref{leapfrog_wave} shows how this approximation suffers from the same problem as the leapfrog advection approximation since it too has ghost points which see the function as a periodic extension and leads to the same problem of steps in the L2-norm of the error. Adjusting the size of the time steps by making $k=0.5h$ leads to a minor reduction in the L2-norm of the error, however with the large steps due to the periodic extension this is almost unnoticeable, if the time step is doubled to $k=2h$ then the error increases exponentially over time after a relatively short period of time.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
