Refactored report to remove Appendix

--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -7,6 +7,8 @@
 \usepackage{mcode} %Include Matlab code
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{caption}
+\usepackage{subcaption}
 %-------------------------------------------------------------------------------
 %	TITLE SECTION
 %-------------------------------------------------------------------------------
@@ -32,6 +34,4 @@
 \input{2FD}
 \input{3TI}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\appendix
-\input{Appendix}
 \end{document}
