--- a/Report/2FD.tex
+++ b/Report/2FD.tex
@@ -1,6 +1,12 @@
 \chapter{Finite Difference}
-There are several different variants of the  finite difference methods (FDMs), this is dependent on the stencil, the number of points being used to determine a single value. The use of a larger stencil yields a lower error, as can be seen in Appendix \ref{errorgraph} but also requires more computation time to generate a result.
+There are several different variants of the  finite difference methods (FDMs), this is dependent on the stencil, the number of points being used to determine a single value. The use of a larger stencil yields a lower error, as can be seen in Figure \ref{fig:errorgraph} but also requires more computation time to generate a result.
 %----------------------------------------------------------------------
+\begin{figure}[H] 
+ \includegraphics[width=\textwidth]{Images/Error.jpg}
+ \caption{Comparison of Errors in FDM variants in log plot}
+ \label{fig:errorgraph}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{First Derivatives}
 The FDM uses Taylor expansion to approximate the derivative of a function of finite points using the surrounding points such that $dv_i \approx \frac{df(x_i)}{dx}$.
 \linebreak
@@ -17,11 +23,11 @@ Equation \ref{1ofdm2s} uses a three point stencil, but due to the fact that the 
 \begin{equation} \label{1ofdm2s}
   dv_i = \frac{4v_{i+1} - v_{i+2} + 3v_i}{2h}
 \end{equation}
-Equation \ref{1ofdm4c} uses a four point, centered stencil to produce a fourth order approximation, $\epsilon \approx h^4$. As seen in Appendix \ref{errorgraph} this is the most accurate as it has the lowest error and the steepest gradient such that a smaller smaller spacing gives a much higher reduction in error compared to that of the other stencils.
+Equation \ref{1ofdm4c} uses a four point, centered stencil to produce a fourth order approximation, $\epsilon \approx h^4$. As seen in Figure \ref{fig:errorgraph} this is the most accurate as it has the lowest error and the steepest gradient such that a smaller smaller spacing gives a much higher reduction in error compared to that of the other stencils.
 \begin{equation} \label{1ofdm4c}
   dv_i = \frac{-v_{i+2} + 8v_{i+1} - 8v_{i-1} + v_{i-2}}{12h}
 \end{equation}
-%----------------------------------------------------------------------
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Second Derivatives}
 Second derivatives are calculated in a similar manner to that of the first order and also have several variants depending on the stencil. It also uses the Taylor expansion to approximate the second derivative at a point such that $d^2v_i \approx \frac{df^2(x_i)}{dx^2}$.
 \linebreak
