--- a/Report/3TI.tex
+++ b/Report/3TI.tex
@@ -64,7 +64,54 @@ u(x,t) = F(x-ct) + G(x+ct)
 By analyzing this solution and comparing it to that of the Advection Equation, we see that we in fact get two characteristic coordinates which are lines with slopes of $\pm c$.
 %-------------------------------------------------------------------
 \subsection{Spacing}
-Along with finding the characteristics comes the trouble of determining the spacing for the spacial and time axis when plotting. The spacial spacing will be denoted by $h$ and time by $k$. If $h<k$ then the data needed to determine the value of the function at a given point in space and time will require data outside of the bounds of the stencil, conversely if $h>k$ then data between two spacial points is needed to calculate the next value, but this can be interpolated at the cost of calculation time and may yield a higher accuracy. The standard is to set $h=k$ so that the stencil exactly fits the data needed to calculate the next point and every point being used need not be interpolated as it falls on an existing point in the spacing. This can be seen in the figures in Appendix \ref{advcoordimg} for the Advection Equation and in Appendix \ref{wavecoordimg} for the Wave Equation.
+Along with finding the characteristics comes the trouble of determining the spacing for the spacial and time axis when plotting. The spacial spacing will be denoted by $h$ and time by $k$. If $h<k$ then the data needed to determine the value of the function at a given point in space and time will require data outside of the bounds of the stencil, conversely if $h>k$ then data between two spacial points is needed to calculate the next value, but this can be interpolated at the cost of calculation time and may yield a higher accuracy. The standard is to set $h=k$ so that the stencil exactly fits the data needed to calculate the next point and every point being used need not be interpolated as it falls on an existing point in the spacing. This can be seen in the figures in Figure \ref{fig:advcoordimg} for the Advection Equation and in Figure \ref{fig:wavecoordimg} for the Wave Equation.
+%----------------------------------------------------------------------
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/advection_h<k.jpg}
+  \caption{$h<k$}
+  \label{fig:aci1}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/advection_h=k.jpg}
+  \caption{$h=k$}
+  \label{fig:aci2}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/advection_h>k.jpg}
+  \caption{$h>k$}
+  \label{fig:aci3}
+\end{subfigure}
+\caption{Advection characteristic}
+\label{fig:advcoordimg}
+\end{figure}
+%----------------------------------------------------------------------
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.3\textwidth}
+  \centering
+  \includegraphics[width=\textwidth]{Images/wave_h<k.jpg}
+  \caption{$h<k$}
+  \label{fig:wci1}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/wave_h=k.jpg}
+  \caption{$h=k$}
+  \label{fig:wci2}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/wave_h>k.jpg}
+  \caption{$h>k$}
+  \label{fig:wci3}
+\end{subfigure}
+\caption{Wave Equation Charactersitics}
+\label{fig:wavecoordimg}
+\end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Discretization}
 Using the FDM discussed in Chapter 2 we will confirm the validity of three approximations of the advection equation, the Centered Euler, Leapfrog, and Upwind Euler methods, and the Leapfrog approximation of the wave equation.
@@ -151,18 +198,64 @@ The initial equation
   u(x,0) = e^{-x^2}
 \end{equation}
 was calculated on the interval $-10<x<10$ and $0<t<20$ with $100$ and $1000$ data points and compared to the exact solution, the L2-norm of the error was also analysed. For each solution the ghost points were a periodic extension of the previous steps data. The results were as follows
+%-------------------------------------------------------------------------------
 \subsection{Centered Euler Advection Equation}
 The exact solution to the equation is
 \begin{equation}
 u(x,t) = e^{-(x-t)^2}
 \end{equation}
-The wild variance of the Centered Euler method can be seen after only two seconds in Appendix \ref{center_euler_adv}. The L2-norm of the error exponentially increases over time.
+The wild variance of the Centered Euler method can be seen after only two seconds in Figure \ref{center_euler_adv}. The L2-norm of the error exponentially increases over time as seen in Figure \ref{center_euler_adv_l2}.
+%-------------------------------------------------------------------------------
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/center_euler_adv.jpg}
+ \caption{Advection Equation and Approximations after 2 seconds}
+ \label{center_euler_adv}
+\end{figure}
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/center_euler_adv_l2.jpg}
+ \caption{Change in L2-norm over time of Centered Euler Evolution}
+ \label{center_euler_adv_l2}
+\end{figure}
+%-------------------------------------------------------------------------------
 \subsection{Leapfrog Advection Equation}
-The L2-norm of the error as seen in Appendix \ref{leapfrog_adv} is due to the ghost points of the approximation being treated as a periodic extension of the function causing the function to be repeated every 20 time steps, the start of this can be seen in the appendix, which shows the functions after nine time steps.
+The L2-norm of the error as seen in Figure \ref{leapfrog_adv_l2} is due to the ghost points of the approximation being treated as a periodic extension of the function causing the function to be repeated every 20 time steps, the start of this can be seen in Figure \ref{leapfrog_adv}, which shows the functions after nine time steps.
+%-------------------------------------------------------------------------------
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/leapfrog_adv_l2.jpg}
+ \caption{Change in L2-norm over time of Leapfrog Evolution}
+ \label{leapfrog_adv_l2}
+\end{figure}
+\begin{figure}[H]
+ \includegraphics[scale=0.5]{Images/leapfrog_adv.jpg}
+ \caption{Advection Equation and Approximations after 9 seconds}
+ \label{leapfrog_adv}
+\end{figure}
+%-------------------------------------------------------------------------------
 \subsection{Leapfrog Wave Equation}
 The exact solution to the equation is
 \begin{equation}
 u(x,t) = \frac{1}{2}(e^{-(x-t)^2} + e^{-(x+t)^2})
 \end{equation}
-Appendix \ref{leapfrog_wave} shows how this approximation suffers from the same problem as the leapfrog advection approximation since it too has ghost points which see the function as a periodic extension and leads to the same problem of steps in the L2-norm of the error. Adjusting the size of the time steps by making $k=0.5h$ leads to a minor reduction in the L2-norm of the error, however with the large steps due to the periodic extension this is almost unnoticeable, if the time step is doubled to $k=2h$ then the error increases exponentially over time after a relatively short period of time.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Figure \ref{leapfrog_wave} shows how this approximation suffers from the same problem as the leapfrog advection approximation since it too has ghost points which see the function as a periodic extension and leads to the same problem of steps in the L2-norm of the error, shown in Figure \ref{leapfrog_wave_l2}. Adjusting the size of the time steps by making $k=0.5h$ leads to a minor reduction in the L2-norm of the error, as seen in Figure \ref{leapfrog_wave_l2_halfk}, however with the large steps due to the periodic extension this is almost unnoticeable, if the time step is doubled to $k=2h$ then the error increases exponentially over time after a relatively short period of time, seen in Figure \ref{leapfrog_wave_l2_2k}.
+%-------------------------------------------------------------------------------
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/leapfrog_wave_l2.jpg}
+ \caption{Change in L2-norm over time of Leapfrog Evolution with $k = h$}
+ \label{leapfrog_wave_l2}
+\end{figure}
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/leapfrog_wave_l2_halfk.jpg}
+ \caption{Change in L2-norm over time of Leapfrog Evolution with $k = 0.5h$}
+ \label{leapfrog_wave_l2_halfk}
+\end{figure}
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/leapfrog_wave_l2_2k.jpg}
+ \caption{Change in L2-norm over time of Leapfrog Evolution with $k = 2h$}
+ \label{leapfrog_wave_l2_2k}
+\end{figure}
+\begin{figure}[H] 
+ \includegraphics[scale=0.5]{Images/leapfrog_wave.jpg}
+ \caption{Wave Equation and Approximations after 9 seconds}
+ \label{leapfrog_wave}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
