--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -26,9 +26,9 @@
 %DOCUMENT
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
-
 \maketitle % Print the title
-
+\tableofcontents
+\listoffigures	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{1Intro}
 \input{2FD}
