--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -30,8 +30,9 @@
 \tableofcontents
 \listoffigures	
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\input{1Intro}
-\input{2FD}
-\input{3TI}
+%\input{1Intro}
+%\input{2FD}
+%\input{3TI}
+\input{4VNA}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
