--- a/Report/4VNA.tex
+++ b/Report/4VNA.tex
@@ -221,8 +221,8 @@ Substituting Equation \ref{vna:eq:freq}:
 \end{equation*}
 Now substituting Equation \ref{vna:eq:Q} we get
 \begin{equation*}
-    \hat{Q} &= 1 + 2C\frac{k}{h^2} (\cos \omega h - 1)
-\end{equation}
+    \hat{Q} = 1 + 2C\frac{k}{h^2} (\cos \omega h - 1)
+\end{equation*}
 For $\hat{Q}$ to be stable and since $\cos \omega h - 1$ varies between $0$ and $-2$
 \begin{equation*}
 \begin{align}
