--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -34,5 +34,6 @@
 \input{2FD}
 \input{3TI}
 \input{4VNA}
+\input{5TE}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
