Started on code for 5TE

--- a/Report/4VNA.tex
+++ b/Report/4VNA.tex
@@ -198,7 +198,6 @@ This shows that the Leapfrog is stable provided the square rooted term is real, 
 \end{align}
 \end{equation*}
 Therefore the Leapfrog's stability also depends on Courant's stability condition is met.
-\pagebreak
 %--------------------------------------------------------------
 \subsection{ Diffusion Equation}
 Using Equation \ref{1ofdm} for the time derivative and Equation \ref{2ofdm2c} for the second spatial derivative, we can transform the diffusion equation and solve for $v_j^{n+1}$. For the sake of removing confusion $K$ will be replaced with $C$.
@@ -221,8 +220,8 @@ Substituting Equation \ref{vna:eq:freq}:
 \end{equation*}
 Now substituting Equation \ref{vna:eq:Q} we get
 \begin{equation*}
-    \hat{Q} &= 1 + 2C\frac{k}{h^2} (\cos \omega h - 1)
-\end{equation}
+    \hat{Q} = 1 + 2C\frac{k}{h^2} (\cos \omega h - 1)
+\end{equation*}
 For $\hat{Q}$ to be stable and since $\cos \omega h - 1$ varies between $0$ and $-2$
 \begin{equation*}
 \begin{align}
