--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -1,9 +1,60 @@
 \chapter{Time Evolutions}
 In this chapter we will be looking a the conservative form of an equation. An equation is said to be in it's conservative form if it can be written as:
-\begin{equation}
+\begin{equation*}
   u_t + F(x,u)_x = 0
-\end{equation}
-The advection and diffustion equations can therefore be written in conservative form, as well as Burger's equation.
+\end{equation*}
+The advection and diffusion equations can therefore be written in conservative form, as well as Burger's equation.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Lax-Fredrichs}
-The Lax-Fredrichs time evolutions scheme for conservative 
+The Lax-Fredrichs (LF) time evolutions scheme for conservative equation is given by:
+\begin{equation*}
+  v^{n+1}_j \simeq \frac{1}{2}(v^n_{j+1} + v^n_{j-1}) - \frac{k}{2h}(F^n_{j+1}-F^n_{j-1}) + O(k,h^2)
+\end{equation*}
+Focusing on the first term of the LF method, we see 
+\begin{equation*}
+  \frac{1}{2}(v^n_{j+1} + v^n_{j-1}) = v^n_j + \frac{1}{2}(v^n_{j+1} - 2v^n_j + v^n_{j-1})
+\end{equation*}
+If $F^n_j$ is then set to $cv^n_j$, we then get the centered Euler form of the advection equation with this second derivative component. This component then warps the advection equation to 
+\begin{equation*}
+ u_t + cu_x = \frac{h^2}{2k}u_{xx}
+\end{equation*}
+This gives the centered Euler a dissipative term, $\epsilon = \frac{h^2}{2k}$. Setting $\frac{h}{k}$ to be a constant, $\zeta$, we get
+\begin{equation*}
+  \epsilon = \frac{1}{2}\zeta h
+\end{equation*}
+Therefore as $h\rightarrow 0$, $\epsilon\rightarrow0$, and the exact form of the advection equation is formed. This is known as artificial dissipation and is used to stabilize an unstable scheme. It is also known as Kreiss-Oliger dissipation.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Lax-Wendroff}
+The Lax-Wendroff (LW) scheme uses the LF scheme to first obtain a ``half step'', which it then uses to perform a leapfrog=like step to achieve the next time step. The half steps are given as:
+\begin{equation*}
+  \begin{align}
+  v^{n+1/2}_{j-1/2} &\simeq \frac{1}{2}(v^n_j + v^n_{j-1}) - \frac{k}{2h}(F^n_j-F^n_{j-1})\\
+  v^{n+1/2}_{j+1/2} &\simeq \frac{1}{2}(v^n_{j+1} + v^n_j) - \frac{k}{2h}(F^n_{j+1}-F^n_j)\\
+  \end{align}
+\end{equation*}
+And the leapfrog step is given as:
+\begin{equation*}
+  v^{n+1}_j \simeq v^n_j-\frac{k}{h}(F^{n+1/2}_{j+1/2}-F^{n+1/2}_{j-1/2})
+\end{equation*}
+The addition of this half step improves on the LF scheme from $O(h^2,k)$ to $O(h^2,k^2)$.
+\\
+\\
+For the advection equation specifically, we can derive the LW scheme with $F$ set to $cu$ to obtain
+\begin{equation*}
+\begin{align}
+  v^{n+1/2}_{j-1/2} &\simeq \frac{1}{2}(v^n_j + v^n_{j-1}) - \frac{ck}{2h}(v^n_j-v^n_{j-1})\\
+  v^{n+1/2}_{j+1/2} &\simeq \frac{1}{2}(v^n_{j+1} + v^n_j) - \frac{ck}{2h}(v^n_{j+1}-v^n_j)\\
+\end{align}
+\end{equation*}
+as the half steps. Therefore the full scheme is
+\begin{equation*}
+\begin{align}
+  v^{n+1}_j &\simeq v^n_j-\frac{ck}{h}\bigg(\frac{1}{2}(v^n_j + v^n_{j-1}) - \frac{ck}{2h}(v^n_j-v^n_{j-1})- \frac{1}{2}(v^n_{j+1} + v^n_j) - \frac{ck}{2h}(v^n_{j+1}-v^n_j)\bigg)\\  
+  v^{n+1}_j &\simeq v^n_j-\frac{ck}{2h}(v^n_{j+1} + v^n_{j-1}) - \frac{c^2k^2}{2h^2}(v^n_{j+1} -2v^n_j + v^n_{j-1})
+\end{align}
+\end{equation*}
+
+
+
+
+
