Finished Set 5 question 1 and 2$

--- a/Report/2FD.tex
+++ b/Report/2FD.tex
@@ -2,6 +2,7 @@
 There are several different variants of the  finite difference methods (FDMs), this is dependent on the stencil, the number of points being used to determine a single value. The use of a larger stencil yields a lower error, as can be seen in Figure \ref{fig:errorgraph} but also requires more computation time to generate a result.
 %----------------------------------------------------------------------
 \begin{figure}[H] 
+ \centering
  \includegraphics[width=\textwidth]{Images/Error.jpg}
  \caption{Comparison of Errors in FDM variants in log plot}
  \label{fig:errorgraph}
