--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -9,6 +9,7 @@
 \usepackage{float}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{fullpage}
 %-------------------------------------------------------------------------------
 %	TITLE SECTION
 %-------------------------------------------------------------------------------
