--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -91,3 +91,10 @@ Therefore
 \end{align}
 \end{equation*}
 Which means that it is stable so long as Courant's stability condition is met.
+\\
+\\
+Implementing this scheme with the advection equation with $c=1$ and $k=h$
+
+
+
+
