Finished code for section 5

--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -109,7 +109,28 @@ Implementing this scheme with the advection equation of a Gaussian pulse with $c
  \label{laxwen_adv_l2}
 \end{figure}
 %------------------------------------------------------------------------------------------------------------------------------------------
-Comparing the Lax-Wendroff to the centered leapfrog and upwind Euler, we find that it is more stable than both these methods
-
+Comparing the Lax-Wendroff to the centered leapfrog and upwind Euler, we find that it is more stable than both these methods as shown by Figure \ref{fig:stepcompare}. We can see that comparing the evolution of the advection equation with a \texttt{hardlim} as the initial equation. We can see the accuracy of the Lax-Wendroff in this manner as at some points in time its L2-norm of the error is zero due to its perfect projection of the equation.
+%------------------------------------------------------------------------------------------------------------------------------------------
+\begin{figure}[H]
+\centering
+\begin{subfigure}[b]{0.3\textwidth}
+  \centering
+  \includegraphics[width=\textwidth]{Images/adv_step_100.jpg}
+  \caption{$N=100$}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/adv_step_200.jpg}
+  \caption{$N=200$}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.3\textwidth}
+  \includegraphics[width=\textwidth]{Images/adv_step_400.jpg}
+  \caption{$N=400$}
+\end{subfigure}
+\caption{Comparison of Lax-Wendroff, Upwind Euler and Centered Leapfrog Methods}
+\label{fig:stepcompare}
+\end{figure}
+%--------------------------------------------------------------------------------------------------------------------------------------------
 
 
