--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -36,5 +36,6 @@
 \input{3TI}
 \input{4VNA}
 \input{5TE}
+\input{6FCM}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
