Finished FDM discussion

--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -91,8 +91,8 @@ Therefore
 \end{align}
 \end{equation*}
 Which means that it is stable so long as Courant's stability condition is met.
-\\
-\\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Implementing and Comparing the Lax-Wendroff}
 Implementing this scheme with the advection equation of a Gaussian pulse with $c=1$ and $k=h$ and evolving the system over 4 units of time. Figure \ref{laxwen_adv} shows that the pulse is almost perfectly propagated by this method. The L2-norm of the error can be seen in Figure \ref{laxwen_adv_l2} showing that the method is very stable.
 %------------------------------------------------------------------------------------------------------------------------------------------
 \begin{figure}[H]
