--- a/Report/NMReport.tex
+++ b/Report/NMReport.tex
@@ -37,5 +37,6 @@
 \input{4VNA}
 \input{5TE}
 \input{6FCM}
+\input{7SLM}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
