--- a/Report/5TE.tex
+++ b/Report/5TE.tex
@@ -1,8 +1,8 @@
 -\chapter{Time Evolutions}
 In this chapter we will be looking a the conservative form of an equation. An equation is said to be in it's conservative form if it can be written as:
-\begin{equation*}
+\begin{equation} \label{eq:conf}
   u_t + F(x,u)_x = 0
-\end{equation*}
+\end{equation}
 The advection and diffusion equations can therefore be written in conservative form, as well as Burger's equation.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Lax-Fredrichs}
